Code/Celerity/BQNHDL/ANTLR/BQNHDLParser.py
# Generated from BQNHDL.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class BQNHDLParser ( Parser ):

    grammarFileName = "BQNHDL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'⋄'", "','", "'\n'", "'⇐'", "'.'", "'('", 
                     "')'", "'⟨'", "'⟩'", "'‿'", "'←'", "'↩'", "'𝕊'", "'𝕣'", 
                     "'→'", "'·'", "'𝕨'", "'𝕩'", "'𝕗'", "'𝔽'", "'𝕘'", 
                     "'𝔾'", "'_𝕣'", "'_𝕣_'", "'⁼'", "'˜'", "':'", "'{'", 
                     "'}'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "CHARACTER", 
                      "STRING", "Sl", "Fl", "Ml", "Cl", "S", "F", "M", "C", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_sep = 2
    RULE_expr = 3
    RULE_export = 4
    RULE_anything = 5
    RULE_mod2 = 6
    RULE_mod1 = 7
    RULE_func = 8
    RULE_atom = 9
    RULE_lis = 10
    RULE_subject = 11
    RULE_asgn = 12
    RULE_m2Expr = 13
    RULE_m1Expr = 14
    RULE_derv = 15
    RULE_ret = 16
    RULE_operand = 17
    RULE_fork = 18
    RULE_train = 19
    RULE_funcExpr = 20
    RULE_arg = 21
    RULE_nothing = 22
    RULE_name = 23
    RULE_lhs_any = 24
    RULE_lhs_atom = 25
    RULE_lhs_elt = 26
    RULE_lhs_entry = 27
    RULE_lhsStr = 28
    RULE_lhsList = 29
    RULE_lhs = 30
    RULE_subExpr = 31
    RULE_headW = 32
    RULE_headX = 33
    RULE_headF = 34
    RULE_headG = 35
    RULE_mod1H1 = 36
    RULE_mod2H1 = 37
    RULE_funcHead = 38
    RULE_m1Head = 39
    RULE_m2Head = 40
    RULE_undoHead = 41
    RULE_body = 42
    RULE_fCase = 43
    RULE_mCase = 44
    RULE_cCase = 45
    RULE_fMain = 46
    RULE_mMain = 47
    RULE_cMain = 48
    RULE_brSub = 49
    RULE_brFunc = 50
    RULE_brMod1 = 51
    RULE_brMod2 = 52

    ruleNames =  [ "program", "stmt", "sep", "expr", "export", "anything", 
                   "mod2", "mod1", "func", "atom", "lis", "subject", "asgn", 
                   "m2Expr", "m1Expr", "derv", "ret", "operand", "fork", 
                   "train", "funcExpr", "arg", "nothing", "name", "lhs_any", 
                   "lhs_atom", "lhs_elt", "lhs_entry", "lhsStr", "lhsList", 
                   "lhs", "subExpr", "headW", "headX", "headF", "headG", 
                   "mod1H1", "mod2H1", "funcHead", "m1Head", "m2Head", "undoHead", 
                   "body", "fCase", "mCase", "cCase", "fMain", "mMain", 
                   "cMain", "brSub", "brFunc", "brMod1", "brMod2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    NUMBER=31
    CHARACTER=32
    STRING=33
    Sl=34
    Fl=35
    Ml=36
    Cl=37
    S=38
    F=39
    M=40
    C=41
    WS=42
    COMMENT=43

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BQNHDLParser.StmtContext)
            else:
                return self.getTypedRuleContext(BQNHDLParser.StmtContext,i)


        def sep(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BQNHDLParser.SepContext)
            else:
                return self.getTypedRuleContext(BQNHDLParser.SepContext,i)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BQNHDLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__0) | (1 << BQNHDLParser.T__1) | (1 << BQNHDLParser.T__2))) != 0):
                self.state = 106
                self.sep()


            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 109
                    self.stmt()
                    self.state = 110
                    self.sep() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 117
            self.stmt()
            self.state = 119
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__0) | (1 << BQNHDLParser.T__1) | (1 << BQNHDLParser.T__2))) != 0):
                self.state = 118
                self.sep()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BQNHDLParser.ExprContext,0)


        def export(self):
            return self.getTypedRuleContext(BQNHDLParser.ExportContext,0)


        def nothing(self):
            return self.getTypedRuleContext(BQNHDLParser.NothingContext,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = BQNHDLParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 124
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.export()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.nothing(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SepContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BQNHDLParser.RULE_sep

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSep" ):
                listener.enterSep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSep" ):
                listener.exitSep(self)




    def sep(self):

        localctx = BQNHDLParser.SepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sep)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__0) | (1 << BQNHDLParser.T__1) | (1 << BQNHDLParser.T__2))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__0) | (1 << BQNHDLParser.T__1) | (1 << BQNHDLParser.T__2))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subExpr(self):
            return self.getTypedRuleContext(BQNHDLParser.SubExprContext,0)


        def funcExpr(self):
            return self.getTypedRuleContext(BQNHDLParser.FuncExprContext,0)


        def m1Expr(self):
            return self.getTypedRuleContext(BQNHDLParser.M1ExprContext,0)


        def m2Expr(self):
            return self.getTypedRuleContext(BQNHDLParser.M2ExprContext,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = BQNHDLParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 135
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.subExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.funcExpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.m1Expr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.m2Expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExportContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs_elt(self):
            return self.getTypedRuleContext(BQNHDLParser.Lhs_eltContext,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_export

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExport" ):
                listener.enterExport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExport" ):
                listener.exitExport(self)




    def export(self):

        localctx = BQNHDLParser.ExportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_export)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__5) | (1 << BQNHDLParser.T__7) | (1 << BQNHDLParser.S) | (1 << BQNHDLParser.F) | (1 << BQNHDLParser.M) | (1 << BQNHDLParser.C))) != 0):
                self.state = 137
                self.lhs_elt()


            self.state = 140
            self.match(BQNHDLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AnythingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(BQNHDLParser.AtomContext,0)


        def func(self):
            return self.getTypedRuleContext(BQNHDLParser.FuncContext,0)


        def mod1(self):
            return self.getTypedRuleContext(BQNHDLParser.Mod1Context,0)


        def mod2(self):
            return self.getTypedRuleContext(BQNHDLParser.Mod2Context,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_anything

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnything" ):
                listener.enterAnything(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnything" ):
                listener.exitAnything(self)




    def anything(self):

        localctx = BQNHDLParser.AnythingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_anything)
        try:
            self.state = 146
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.atom(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.func()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.mod1()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.mod2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mod2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self):
            return self.getToken(BQNHDLParser.C, 0)

        def atom(self):
            return self.getTypedRuleContext(BQNHDLParser.AtomContext,0)


        def Cl(self):
            return self.getToken(BQNHDLParser.Cl, 0)

        def m1Expr(self):
            return self.getTypedRuleContext(BQNHDLParser.M1ExprContext,0)


        def brMod2(self):
            return self.getTypedRuleContext(BQNHDLParser.BrMod2Context,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_mod2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMod2" ):
                listener.enterMod2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMod2" ):
                listener.exitMod2(self)




    def mod2(self):

        localctx = BQNHDLParser.Mod2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mod2)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__5) | (1 << BQNHDLParser.T__7) | (1 << BQNHDLParser.T__27) | (1 << BQNHDLParser.Sl) | (1 << BQNHDLParser.S))) != 0):
                    self.state = 148
                    self.atom(0)
                    self.state = 149
                    self.match(BQNHDLParser.T__4)


                self.state = 153
                self.match(BQNHDLParser.C)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(BQNHDLParser.Cl)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.match(BQNHDLParser.T__5)
                self.state = 156
                self.m1Expr()
                self.state = 157
                self.match(BQNHDLParser.T__6)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.brMod2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mod1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def M(self):
            return self.getToken(BQNHDLParser.M, 0)

        def atom(self):
            return self.getTypedRuleContext(BQNHDLParser.AtomContext,0)


        def Ml(self):
            return self.getToken(BQNHDLParser.Ml, 0)

        def m2Expr(self):
            return self.getTypedRuleContext(BQNHDLParser.M2ExprContext,0)


        def brMod1(self):
            return self.getTypedRuleContext(BQNHDLParser.BrMod1Context,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_mod1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMod1" ):
                listener.enterMod1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMod1" ):
                listener.exitMod1(self)




    def mod1(self):

        localctx = BQNHDLParser.Mod1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mod1)
        self._la = 0 # Token type
        try:
            self.state = 174
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__5) | (1 << BQNHDLParser.T__7) | (1 << BQNHDLParser.T__27) | (1 << BQNHDLParser.Sl) | (1 << BQNHDLParser.S))) != 0):
                    self.state = 162
                    self.atom(0)
                    self.state = 163
                    self.match(BQNHDLParser.T__4)


                self.state = 167
                self.match(BQNHDLParser.M)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.match(BQNHDLParser.Ml)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.match(BQNHDLParser.T__5)
                self.state = 170
                self.m2Expr()
                self.state = 171
                self.match(BQNHDLParser.T__6)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 173
                self.brMod1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def F(self):
            return self.getToken(BQNHDLParser.F, 0)

        def atom(self):
            return self.getTypedRuleContext(BQNHDLParser.AtomContext,0)


        def Fl(self):
            return self.getToken(BQNHDLParser.Fl, 0)

        def funcExpr(self):
            return self.getTypedRuleContext(BQNHDLParser.FuncExprContext,0)


        def brFunc(self):
            return self.getTypedRuleContext(BQNHDLParser.BrFuncContext,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = BQNHDLParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.state = 188
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__5) | (1 << BQNHDLParser.T__7) | (1 << BQNHDLParser.T__27) | (1 << BQNHDLParser.Sl) | (1 << BQNHDLParser.S))) != 0):
                    self.state = 176
                    self.atom(0)
                    self.state = 177
                    self.match(BQNHDLParser.T__4)


                self.state = 181
                self.match(BQNHDLParser.F)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.match(BQNHDLParser.Fl)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 183
                self.match(BQNHDLParser.T__5)
                self.state = 184
                self.funcExpr()
                self.state = 185
                self.match(BQNHDLParser.T__6)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 187
                self.brFunc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def S(self):
            return self.getToken(BQNHDLParser.S, 0)

        def Sl(self):
            return self.getToken(BQNHDLParser.Sl, 0)

        def subExpr(self):
            return self.getTypedRuleContext(BQNHDLParser.SubExprContext,0)


        def brSub(self):
            return self.getTypedRuleContext(BQNHDLParser.BrSubContext,0)


        def lis(self):
            return self.getTypedRuleContext(BQNHDLParser.LisContext,0)


        def atom(self):
            return self.getTypedRuleContext(BQNHDLParser.AtomContext,0)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)



    def atom(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BQNHDLParser.AtomContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_atom, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            token = self._input.LA(1)
            if token in [BQNHDLParser.S]:
                self.state = 191
                self.match(BQNHDLParser.S)

            elif token in [BQNHDLParser.Sl]:
                self.state = 192
                self.match(BQNHDLParser.Sl)

            elif token in [BQNHDLParser.T__5]:
                self.state = 193
                self.match(BQNHDLParser.T__5)
                self.state = 194
                self.subExpr()
                self.state = 195
                self.match(BQNHDLParser.T__6)

            elif token in [BQNHDLParser.T__27]:
                self.state = 197
                self.brSub()

            elif token in [BQNHDLParser.T__7]:
                self.state = 198
                self.lis()

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 206
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BQNHDLParser.AtomContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_atom)
                    self.state = 201
                    if not self.precpred(self._ctx, 6):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                    self.state = 202
                    self.match(BQNHDLParser.T__4)
                    self.state = 203
                    self.match(BQNHDLParser.S) 
                self.state = 208
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class LisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sep(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BQNHDLParser.SepContext)
            else:
                return self.getTypedRuleContext(BQNHDLParser.SepContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BQNHDLParser.ExprContext)
            else:
                return self.getTypedRuleContext(BQNHDLParser.ExprContext,i)


        def getRuleIndex(self):
            return BQNHDLParser.RULE_lis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLis" ):
                listener.enterLis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLis" ):
                listener.exitLis(self)




    def lis(self):

        localctx = BQNHDLParser.LisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.match(BQNHDLParser.T__7)
            self.state = 211
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BQNHDLParser.T__0) | (1 << BQNHDLParser.T__1) | (1 << BQNHDLParser.T__2))) != 0):
                self.state = 210
                self.sep()

